force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/SPEN_Annual_Contract_Payment__c.object-meta.xml
<CustomObject>
    <description>Object to capture the equipment used in establishing the contract of L&amp;P Land Interest</description>
    <label>Annual Contract Payment</label>
    <nameField>
        <displayFormat>ACP-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Contract Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>