force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/Licence_Area__c.field-meta.xml
<CustomField>
    <fullName>Licence_Area__c</fullName>
    <label>Licence Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>SPM</fullName>
            </value>
            <value>
                <fullName>SPT</fullName>
            </value>
            <value>
                <fullName>SPM 132</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>