force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Apparatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Apparatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apparatus</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>SPEN_LP_Apparatus__c.Licence_Area__c</field>
            <operation>equals</operation>
            <valueField>$Source.Licence_Area__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_LP_Apparatus__c</referenceTo>
    <relationshipLabel>Annual Contract Payments</relationshipLabel>
    <relationshipName>Annual_Contract_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>