force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Apparatus_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Apparatus_Description__c</fullName>
    <formula>SPEN_Apparatus__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apparatus Description</label>
    <type>Text</type>
</CustomField>