force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Contracting_With__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contracting_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracting With</label>
    <referenceTo>SPEN_PartnerAssociation__c</referenceTo>
    <relationshipLabel>Annual Contract Payments</relationshipLabel>
    <relationshipName>Annual_Contract_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>