force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Land_Interest__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Land_Interest__c</fullName>
    <label>Land Right</label>
    <referenceTo>SPEN_Land_Interest__c</referenceTo>
    <relationshipLabel>Annual Contract Payments</relationshipLabel>
    <relationshipName>Annual_Contract_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>