force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Land_Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Land_Interest_Type__c</fullName>
    <label>Land Right Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Occupier</fullName>
            </value>
            <value>
                <fullName>Owner-Occupier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>