force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_NonPaid__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NonPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Paid</label>
    <type>Checkbox</type>
</CustomField>