force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Occupier_Posting_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Occupier_Posting_Type__c</fullName>
    <label>Occupier Posting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_L_P_Posting_Types</valueSetName>
    </valueSet>
</CustomField>