force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Occupier_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Occupier_SAP_Code__c</fullName>
    <label>Occupier SAP Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>