force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Other_Payments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Other_Payments__c</fullName>
    <label>Other Payments</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>