force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Owner_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Owner_Condition_Type__c</fullName>
    <label>Owner Condition Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>