force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Payment_Percentage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Payment Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>