force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Payment_Rate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Payment_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Rate</label>
    <referenceTo>SPEN_LP_Apparatus_Payment_Rate__c</referenceTo>
    <relationshipLabel>Annual Contract Payments</relationshipLabel>
    <relationshipName>Annual_Contract_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>