force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>