force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Rental_Only__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Rental_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Only</label>
    <type>Checkbox</type>
</CustomField>