force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_ServiceOnly__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ServiceOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Only</label>
    <type>Checkbox</type>
</CustomField>