force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Special_Payment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Special_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Special Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>