force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_L_P_Land_Sub_Types</valueSetName>
    </valueSet>
</CustomField>