force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Total_Wayleave_payment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Total_Wayleave_payment__c</fullName>
    <formula>IF(OR(ISPICKVAL(SPEN_Land_Type__c,&apos;Back Payment&apos;),(ISPICKVAL(SPEN_Land_Type__c,&apos;One Off Payment&apos;))),0,SPEN_Occupier_Payment__c + SPEN_Owner_Payment__c + SPEN_Other_Payments__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Wayleave payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>