force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Tower_Pole_Number__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Tower_Pole_Number__c</fullName>
    <label>Tower / Pole Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>