force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/fields/SPEN_Tower_Size_m2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Tower_Size_m2__c</fullName>
    <label>Tower Size (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>