force-app/main/default/objects/SPEN_Annual_Contract_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Land_Interest__c</columns>
    <columns>SPEN_Quantity__c</columns>
    <columns>SPEN_Apparatus__c</columns>
    <columns>SPEN_Payment_Percentage__c</columns>
    <columns>SPEN_Owner_Payment__c</columns>
    <columns>SPEN_Occupier_Payment__c</columns>
    <columns>SPEN_Other_Payments__c</columns>
    <columns>SPEN_Land_Type__c</columns>
    <columns>SPEN_Sub_Type__c</columns>
    <columns>SPEN_Occupier_SAP_Code__c</columns>
    <columns>SPEN_Owner_SAP_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>